--- a/Portfolio/portfolio/pom.xml
+++ b/Portfolio/portfolio/pom.xml
@@ -59,7 +59,21 @@
     <artifactId>spring-boot-devtools</artifactId>
     <optional>true</optional>
 </dependency>
-    
+    <dependency>
+    <groupId>javax.xml.bind</groupId>
+    <artifactId>jaxb-api</artifactId>
+    <version>2.3.1</version>
+</dependency>
+
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-security</artifactId>
+	</dependency>
+
+
+	<!-- ... other dependency elements ... -->
+
+
 	</dependencies>
 
 	<build>
