--- a/Portfolio/portfolio/src/main/resources/application.properties
+++ b/Portfolio/portfolio/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.jpa.hibernate.ddl-auto = update
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+#spring.security.user=user1
+#spring.security.password=demo@123
